# multipart-form-data-conformance

./: .gitattributes  .gitignore  LICENSE  README.md  design.md  manifest.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: IMPLEMENTATION_TIPS.md
examples/go-stdlib/: .gitignore  REPORT.md  go.mod  main.go  main_test.go
examples/nodejs/: REPORT.md  package.json
examples/nodejs/src/: app.js
examples/nodejs/tests/: test_conformance.js
examples/starlette/: REPORT.md  pyproject.toml
examples/starlette/src/: app.py
examples/starlette/tests/: test_conformance.py
schema/: test-case.schema.json
src/multipart_form_data_conformance/: __init__.py
src/multipart_form_data_conformance/schema/: headers.schema.json  parsed-result.schema.json
tests/basic/001-single-text-field/: input.raw
tests/basic/002-single-file/: input.raw
tests/basic/003-multiple-fields/: test.json
tests/basic/005-multiple-files-same-name/: input.raw
tests/boundaries/040-simple-boundary/: input.raw
tests/boundaries/041-boundary-with-hyphens/: headers.json
tests/boundaries/042-long-boundary/: headers.json  input.raw
tests/boundaries/043-boundary-in-content/: headers.json  input.raw  test.json
tests/boundaries/044-boundary-special-chars/: test.json
tests/boundaries/045-quoted-boundary/: headers.json  input.raw  test.json
tests/boundaries/046-whitespace-around-boundary/: headers.json  input.raw  test.json
tests/browser-variations/300-chrome-webkit-boundary/: headers.json  test.json
tests/browser-variations/302-safari-boundary/: input.raw  test.json
tests/browser-variations/303-chrome-empty-file/: test.json
tests/browser-variations/304-firefox-empty-file/: test.json
tests/content-types/080-explicit-content-type/: test.json
tests/content-types/085-header-folding/: input.raw
tools/: generate-raw.py  run-reference.py  validate-suite.py
tools/lib/: __init__.py  multipart_utils.py
(+106 files in other folders)
