[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multipart-form-data-conformance"
version = "0.1a0"
description = "Language-independent conformance test suite for multipart/form-data parsing and generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["multipart", "form-data", "conformance", "testing", "http"]

[project.urls]
Homepage = "https://github.com/simonw/multipart-form-data-conformance"
Repository = "https://github.com/simonw/multipart-form-data-conformance"

[tool.hatch.build.targets.wheel]
packages = ["src/multipart_form_data_conformance"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
