[project]
name = "starlette-multipart-conformance"
version = "0.1.0"
description = "Starlette conformance tests for multipart/form-data"
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-unused-port>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
